# AutomaticRocketLandingOnDeepLearning

./: README.md
client/: package.json
client/src/: App.tsx  PlanetSurface.tsx  Rocket.tsx
cpp/: CMakeLists.txt  LunarLander_000.cpp  LunarLander_001.cpp  LunarLander_002.cpp  driver.cpp
cpp/archive/: CMakeLists.txt
cpp/archive/example/: clibrary.c
python/: LunarLander.py  LunarLanderHotz.py  LunarLanderIntegrateCPP.py  LunarLanderTrain.py  clibrary.py  main.py  replay_buffer.py
python/archive/: example_000.py
python/archive/gymnasium/: DQN.py  LunarLander_0001.py  LunarLander_0002.py  LunarLander_0003.py  LunarLander_0004.py  LunarLander_0005.py  LunarLander_0006.py  LunarLander_0007.py  LunarLander_0008.py  LunarLander_0009.py  LunarLander_0011.py  LunarLander_0012.py  LunarLander_0013.py  dataset.xlsx  dataset_0000.xlsx  dataset_0001.xlsx  dataset_0002.xlsx  replay_buffer.py
python/archive/gymnasium/trained_model_tf/: fingerprint.pb  keras_metadata.pb  saved_model.pb
python/archive/gymnasium/trained_model_tf/variables/: variables.data-00000-of-00001  variables.index
python/archive/interface/PyQt/: test_000.py  test_0002.py  test_0006.py  test_001.py  test_002.py
python/archive/interface/tkinter/: graf.py  test_000.py  test_001.py  test_002.py  test_003.py  test_006.py  test_006_1.py  test_006_3.py  test_012.py  test_013.py
python/gymnasium/: LunarLander_0000.py  LunarLander_00011.py  LunarLander_0005_GUI.py  LunarLander_0005_no_GUI.py  LunarLander_0010.py
python/interface/PyQt/: test_0001.py  test_0003.py  test_0004.py  test_0005.py
python/interface/tkinter/: test_004.py  test_005.py  test_006_2.py  test_007.py  test_008.py  test_009.py  test_010.py  test_011.py
